# etagere

./: Cargo.toml  README.md
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: alloc_dealloc.rs  bucketed_alloc_dealloc.rs
src/: allocator.rs  allocator2.rs  bucketed.rs  ffi.rs  lib.rs
