[package]
name = "etagere"
description = "A dynamic texture atlas allocator using the shelf packing algorithm."
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"

[dependencies]
euclid = "0.22"
svg_fmt = "0.4"
serde = { version = "1.0", optional = true }

[features]
serialization = ["serde", "euclid/serde"]

[workspace]
members = ["cli"]

# Uncomment this when profiling.
[profile.release]
debug = true
