[package]
name = "etagere"
description = "Dynamic 2D texture atlas allocation using the shelf packing algorithm."
version = "0.2.2"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
euclid = "0.22"
svg_fmt = "0.4"
serde = { version = "1.0", optional = true }

[features]
serialization = ["serde", "euclid/serde"]
checks = []

[workspace]
members = ["cli"]

# Uncomment this when profiling.
[profile.release]
debug = true
